# Dwarf_Fortress_Clone

./: .gitignore  Armor.cpp  Armor.h  CMakeLists.txt  Consumable.cpp  Consumable.h  Dwarf_Fortress_Clone.cpp  Dwarf_Fortress_Clone.sln  Dwarf_Fortress_Clone.vcxproj  Dwarf_Fortress_Clone.vcxproj.filters  Entity.cpp  Entity.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Map.cpp  Map.h  Monster.cpp  Monster.h  Player.cpp  Player.h  View.cpp  View.h  Weapon.cpp  Weapon.h
tests/: bad_test1.json  bad_test2.json  bad_test3.json  bad_test4.json  good_test.json  map.json  mape.json
